# Whisper

./: .gitignore  README.md  docker-compose.yml
backend/: SMOKE_TEST_README.md  amir.m4a  pyproject.toml  smoke_test.py
backend/src/: main.py
backend/src/core/: config.py  database.py
backend/src/db/: models.py
backend/src/db/crud/: crud_transcript.py
backend/src/schemas/: __init__.py  mqc.py  prd.py  summary.py  transcript.py
backend/src/services/: transcription_service.py
